--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 </head>
 
 <body>
+  <div id="wrapper">
+    <div id="header">
+      
+    </div>
+    <div id="body">
+
+    </div>
+    <div id="footer">
+
+    </div>
+  </div>
   <script src="js/scripts.js"></script>
 </body>
 </html>
