--- a/index.html
+++ b/index.html
@@ -21,6 +21,48 @@
 
     </div>
     <div id="footer">
+      <footer>
+        <div class="greybox">
+                <h1 class="joinourmailinglist">Join Our Mailing List</h1>
+                <p class="maintext"> feeding britain will use blaaa dee blaaa dee blaa dee blaa dee blaaa deeee blaaaa deee blaaaa deee blaaa deee</p>
+                <form class="emailaddressform" action="/action_page.php">
+                    <label class="emailaddresstext" for="eaddress">Email Address</label><br>
+                    <input type="text" id="fname" name="fname" value="John"><br>            
+                </form> 
+                <form class="firstnameform" action="/action_page.php">
+                    <label class="firstnametext" for="fname">First Name:</label><br>
+                    <input type="text" id="lname" name="lname" value="Doe"><br><br>
+                </form>
+                <form class="surnameform" action="/action_page.php">
+                    <label class="surnametext" for="fname">Surname:</label><br>
+                    <input type="text" id="lname" name="lname" value="Doe"><br><br>
+                </form>
+                
+            <div class="bottomfooter">
+                <div class="mainmenucontainer">
+                    <h1 class="mainmenu">Main Menu</h1>
+                    <ul>
+                    <dl>Home</dl>
+                    <dl>About Us</dl>
+                    <dl>What We Do</dl>
+                    <dl>Ways To Give</dl>
+                    <dl>Get Involved</dl>
+                    <dl>Blog</dl>
+                    <dl>Donate</dl>
+                    </ul>
+                </div>
+                <div class="registeredaddresscontainer">
+                    <h1 class="registeredaddress">Registered Address</h1>
+                    <ul>
+                    <dl>Feeding Britain</dl>
+                    <dl>55 Tufton Street</dl>
+                    <dl>London</dl>
+                    <dl>SW1P 3QL</dl>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        </footer>
 
     </div>
   </div>
